ajustes endpoints
